# stratum

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
app/: config.py  main.py
app/agents/: dbt_agent.py  drift_agent.py  inference_agent.py  modeling_agent.py  ollama_client.py  quality_agent.py
app/api/: routes.py
app/ingestion/: base.py  csv_parser.py  json_parser.py  pdf_parser.py
app/kafka/: consumer.py  routes.py
app/models/: schema_models.py
app/schemas/: pydantic_models.py
scripts/: seed.py
tests/samples/: customers.csv  orders.json
