[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratum"
version = "0.1.0"
description = "AI agent that ingests unstructured data, infers schemas, and iteratively builds data models with drift detection and quality checks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "pandas>=2.2.0",
    "pdfplumber>=0.11.0",
    "groq>=0.11.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
